--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,10 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+
+static/config.js
+node_modules/
+cron.yaml
+EBSampleApp-Nodejs.iml
+.ebextensions/
