--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mysql": "github:mysqljs/mysql",
+    "sqlite3": "^5.1.4"
   },
   "scripts": {
     "start": "node app.js"
